# xef

./: .gitignore  LICENSE  README.md  avail-config.json  build.gradle.kts  fine-tuning-samples-ron.jsonl  gradle.properties  package-lock.json  package.json  settings.gradle.kts
.github/: dependabot.yml
.github/scripts/: extract_parameters.sh
.github/workflows/: build.yml  create-version-tag.yml  (+7 more)
.run/: Launch Anvil.run.xml  build.run.xml  spotless.run.xml  test.run.xml  wrapper.run.xml
buildSrc/: build.gradle.kts  settings.gradle.kts
core/: TECHNICAL.MD  build.gradle.kts  openai-api-commit  openai-api.yaml
detekt-rules/: build.gradle.kts
docs/: intro.md
evaluator/: build.gradle.kts
evaluator-example/: README.md  build.gradle.kts
evaluator/evalTest/: .gitignore  Dockerfile  data.json  docker-compose.yml  pyproject.toml  script.js  styles.css  test_evaluator.py  test_example.py
example/: build.gradle.kts
examples/: build.gradle.kts
filesystem/: README.MD  build.gradle.kts
gpt4all-kotlin/: README.MD  build.gradle.kts
gradle/: libs.versions.toml
java/: README.md  build.gradle.kts
kotlin/: build.gradle.kts
kotlin-loom/: build.gradle.kts
lang/: build.gradle.kts  xef.json
langchain4k-filesystem/: build.gradle.kts
nodejs-commandexecutor/: build.gradle.kts
openai/: build.gradle.kts
openai-client/: .gitignore  build.gradle.kts
reasoning/: build.gradle.kts
scala/: README.md  build.gradle.kts
scala-cats/: .scalafmt.conf  README.md  build.gradle.kts
server/: README.md  build.gradle.kts
tokenizer/: README.MD  build.gradle.kts
(+3247 files in other folders)
