[tool.poetry]
name = "xef-evaluator"
version = "0.1.0"
description = ""
authors = ["Xef"]
readme = "README.md"
packages = [{include = "xef_evaluator"}]

[tool.poetry.dependencies]
python = "~3.10.0"
deepeval = "0.20.19"
ragas = "^0.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
